# fast-api-hello-world

./: .gitignore  .pre-commit-config.yaml  README.md  crud.py  docker-compose.yml  main.py  models.py  pyproject.toml  pytest.ini  test_.py  test_main.http
alembic/: env.py
